fixed layout issues

--- a/src/components/visualizations/sankey/sankey.scss
+++ b/src/components/visualizations/sankey/sankey.scss
@@ -45,14 +45,15 @@
   #sankey-container {
     padding: 10px;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
   }
   #sankey-table {
     text-align:left;
     height: 100%;
     background-color: inherit;
     display: inline-block;
-    width:45%
+    width:45%;
+    padding-left: 30px;
   }
   .panel_desc{
     margin-top: 10px;
@@ -76,15 +77,17 @@
 
   table tr {
     background-color: #fff !important;
+    page-break-inside: avoid;page-break-before:auto;
+    height: 60px;
+    margin-bottom: 10px;
   }
   table td { display: block; }​
 
-                              #tab_2 > table > tbody > td {
-                                height: 8px;
-                              }
+  #tab_2 > table > tbody > td {
+    height: 32px;
+  }
   table > tbody > tr > td.val{
     width: 116px;
-    height: 5px;
     overflow:visible;
     color: #0C99CD;
   }
@@ -93,8 +96,8 @@
     display: block;
   }
   #tab_2 {
-    margin-top:-20px;
-    margin-bottom:-15px;
+    margin-top: 30px;
+    //margin-bottom:-15px;
   }
   #sankey-table h1 {
     margin-top: 0;
@@ -177,16 +180,9 @@
   #sankey-viz text {
     font-size: 12px;
   }
-  .sankey-brackets {
-    background-repeat: no-repeat;
-    width: 590px;
-    height: 630px;
-  }
+
 
   @media (max-width: 1000px) {
-    #sankey-container {
-      flex-direction: column;
-    }
     #sankey-table {
       width: 100%;
       margin-top: 35px;
